added page3 file

--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
     <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
       <div class="d-flex align-items-center col-md-6 col-10">
         <div class="bg-white col-12 text-center p-5">
-          <h2 class="pb-3">Please type your information below</h2>
+          <h2 class="fw-bold pb-3">Please type your information below</h2>
           <form>
             <div class="row pb-3">
               <div class="col-6">
