added bank.js file

--- a/page2.html
+++ b/page2.html
@@ -16,47 +16,43 @@
   </head>
   <body>
     <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
-      <div class="d-flex align-items-center col-md-6 col-10">
-        <div class="bg-green-blue col-12 p-5">
-          <div class="text-end text-white mb-4">
-            <h4 class="py-1">Your Name: Kaiden Herman</h4>
-            <h4 class="py-1">Your Bank ID: 12345678</h4>
-            <h4 class="py-1">Your First Deposit: $205.00</h4>
+      <div class="d-flex align-items-center col-md-7 col-10">
+        <div class="bg-green text-center text-white col-12">
+          <div class="text-end mb-4 px-4">
+            <p class="font-size m-3 p-1">Your Name: Kaiden Herman</p>
+            <p class="font-size m-3 p-1">Your Bank ID: 12345678</p>
+            <p class="font-size m-3 p-1">Your First Deposit: $205.00</p>
           </div>
 
-          <div class="row bg-danger text-white py-3 mb-4">
-            <div class="col-6 text-start">
-              <h2>Available Balance</h2>
-            </div>
-            <div class="col-6 text-end">
-              <h2>$12,345</h2>
+          <div class="px-3">
+            <div class="d-flex justify-content-center bg-danger col-12 py-1 py-md-2">
+              <p class="col-6 text-start font-size px-4">Available Balance</p>
+              <p class="col-6 text-end font-size px-4">$12,345</p>
             </div>
           </div>
 
-          <div class="d-flex justify-content-center flex-wrap text-center py-1">
+          <div class="d-flex justify-content-center flex-wrap text-center py-1 px-3">
             <div class="col-lg-4 col-12 py-1 py-md-3 px-md-1">
               <div id="withdrawBtn" class="bg-orient hover p-4">
-                <h5 class="text-white">WITHDRAWAL</h5>
-                <i class="fas fa-wallet fa-3x text-white"></i>
+                <p class="font-size mb-3">WITHDRAWAL</p>
+                <i class="fas fa-wallet fa-3x"></i>
               </div>
             </div>
             <div class="col-lg-4 col-12 py-1 py-md-3 px-md-1">
               <div id="depositeBtn" class="bg-orient hover p-4">
-                <h5 class="text-white">DEPOSIT</h5>
-                <i class="fas fa-coins fa-3x text-white"></i>
+                <p class="font-size mb-3">DEPOSIT</p>
+                <i class="fas fa-coins fa-3x"></i>
               </div>
             </div>
             <div class="col-lg-4 col-12 py-1 py-md-3 px-md-1">
               <div id="comeBackLaterBtn" class="bg-orient hover p-4">
-                <h5 class="text-white">COME BACK LATER</h5>
-                <i class="fas fa-home fa-3x text-white"></i>
+                <p class="font-size mb-3">COME BACK LATER</p>
+                <i class="fas fa-home fa-3x"></i>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- <script src="app.js"></script> -->
   </body>
 </html>
