--- a/page1.html
+++ b/page1.html
@@ -17,31 +17,46 @@
   <body>
     <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
       <div class="d-flex align-items-center col-md-6 col-10">
-        <div class="bg-white col-12 text-center p-5">
+        <div id="initial-form" class="bg-light col-12 text-center p-5">
           <h2 class="fw-bold pb-3">Please type your information below</h2>
-          <form>
+
+          <form id="bank-form" class="form" onsubmit="initializeUserAccount(); event.preventDefault()">
             <div class="row pb-3">
-              <div class="col-6">
-                <input type="text" class="form-control" placeholder="First name" />
+              <div class="form-group col-6">
+                <input type="text" class="form-control" name="userFirstName" placeholder="First name" required />
               </div>
-              <div class="col-6">
-                <input type="text" class="form-control" placeholder="Last name" />
+              <div class="form-group col-6">
+                <input type="text" class="form-control" name="userLastName" placeholder="Last name" required />
               </div>
             </div>
             <div class="form-group pb-3">
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your bank ID" />
+              <input type="email" class="form-control" name="userEmail" placeholder="Email" required />
             </div>
             <div class="form-group pb-3">
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your first deposit" />
+              <input type="number" class="form-control" name="userFirstDeposit" placeholder="Enter your first deposit" required />
             </div>
-          </form>
-          <div>
+
+            <div class="form-group pb-3">
+              <div class="form-check">
+                <label class="form-check-label" for="userAccountType1">
+                  <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType1" value="savings" checked required />
+                  Savings
+                </label>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label" for="userAccountType2">
+                  <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType2" value="Checkings" required />
+                  Checkings
+                </label>
+              </div>
+            </div>
             <button type="submit" class="btn btn-primary col-12">Submit</button>
-          </div>
+          </form>
         </div>
+        <div id="bankPage" class="bg-green col-12 text-center text-white"></div>
       </div>
     </div>
 
-    <!-- <script src="app.js"></script> -->
+    <script src="bank.js"></script>
   </body>
 </html>
