created page2 & 3 function

--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
-      <div class="d-flex align-items-center col-md-7 col-10">
+      <div class="d-flex align-items-center col-md-6 col-10">
         <div class="bg-green text-center text-white col-12">
           <div class="text-end mb-4 px-4">
             <p class="font-size m-3 p-1">Your Name: Kaiden Herman</p>
@@ -39,7 +39,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-12 py-1 py-md-3 px-md-1">
-              <div id="depositeBtn" class="bg-orient hover p-4">
+              <div id="depositBtn" class="bg-orient hover p-4">
                 <p class="font-size mb-3">DEPOSIT</p>
                 <i class="fas fa-coins fa-3x"></i>
               </div>
