--- a/page3.html
+++ b/page3.html
@@ -17,7 +17,7 @@
   <body>
     <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
       <div class="d-flex align-items-center col-md-6 col-10">
-        <div class="bg-white col-12 text-center p-4">
+        <div class="bg-light col-12 text-center p-4">
           <h2 class="text-center fw-bold pb-3">Please Enter The Withdrawal Amount</h2>
 
           <div class="form-group row pb-3">
