--- a/page1.html
+++ b/page1.html
@@ -23,17 +23,17 @@
           <form id="bank-form" class="form" onsubmit="initializeUserAccount(); event.preventDefault()">
             <div class="row pb-3">
               <div class="form-group col-6">
-                <input type="text" class="form-control" name="userFirstName" placeholder="First name" required />
+                <input type="text" class="form-control" name="userFirstName" placeholder="First name" value="Masaki" required />
               </div>
               <div class="form-group col-6">
-                <input type="text" class="form-control" name="userLastName" placeholder="Last name" required />
+                <input type="text" class="form-control" name="userLastName" placeholder="Last name" value="Fukumoto" required />
               </div>
             </div>
             <div class="form-group pb-3">
-              <input type="email" class="form-control" name="userEmail" placeholder="Email" required />
+              <input type="email" class="form-control" name="userEmail" placeholder="Email" value="fm@gmail.com" required />
             </div>
             <div class="form-group pb-3">
-              <input type="number" class="form-control" name="userFirstDeposit" placeholder="Enter your first deposit" required />
+              <input type="number" class="form-control" name="userFirstDeposit" placeholder="Enter your first deposit" value="200" required />
             </div>
 
             <div class="form-group pb-3">
@@ -56,7 +56,6 @@
         <div id="bankPage" class="bg-green col-12 text-center text-white"></div>
       </div>
     </div>
-
     <script src="bank.js"></script>
   </body>
 </html>
