added withdrawPage Each function

--- a/page1.html
+++ b/page1.html
@@ -54,6 +54,7 @@
           </form>
         </div>
         <div id="bankPage" class="bg-green col-12 text-center text-white"></div>
+        <div id="sidePage" class="bg-light col-12 text-center"></div>
       </div>
     </div>
     <script src="bank.js"></script>
