--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
               <h5 class="text-center py-1">$100</h5>
             </div>
             <div class="col-9">
-              <input type="number" class="form-control text-end" placeholder="5" />
+              <input type="number" class="form-control text-end withdraw-bill bill-input" data-bill="100" id="moneyWithdraw100" placeholder="5" />
             </div>
           </div>
           <div class="form-group row pb-3">
@@ -33,7 +33,7 @@
               <h5 class="text-center py-1">$50</h5>
             </div>
             <div class="col-9">
-              <input type="number" class="form-control text-end" placeholder="1" />
+              <input type="number" class="form-control text-end withdraw-bill bill-input" data-bill="50" id="moneyWithdraw50" placeholder="1" />
             </div>
           </div>
           <div class="form-group row pb-3">
@@ -41,7 +41,7 @@
               <h5 class="text-center py-1">$20</h5>
             </div>
             <div class="col-9">
-              <input type="number" class="form-control text-end" placeholder="2" />
+              <input type="number" class="form-control text-end withdraw-bill bill-input" data-bill="20" id="moneyWithdraw20" placeholder="2" />
             </div>
           </div>
           <div class="form-group row pb-3">
@@ -49,7 +49,7 @@
               <h5 class="text-center py-1">$10</h5>
             </div>
             <div class="col-9">
-              <input type="number" class="form-control text-end" placeholder="3" />
+              <input type="number" class="form-control text-end withdraw-bill bill-input" data-bill="10" id="moneyWithdraw10" placeholder="3" />
             </div>
           </div>
           <div class="form-group row pb-3">
@@ -57,7 +57,7 @@
               <h5 class="text-center py-1">$5</h5>
             </div>
             <div class="col-9">
-              <input type="number" class="form-control text-end" placeholder="1" />
+              <input type="number" class="form-control text-end withdraw-bill bill-input" data-bill="5" id="moneyWithdraw5" placeholder="1" />
             </div>
           </div>
           <div class="form-group row pb-3">
@@ -65,12 +65,12 @@
               <h5 class="text-center py-1">$1</h5>
             </div>
             <div class="col-9">
-              <input type="number" class="form-control text-end" placeholder="4" />
+              <input type="number" class="form-control text-end withdraw-bill bill-input" data-bill="1" id="moneyWithdraw1" placeholder="4" />
             </div>
           </div>
 
           <div class="money-box bg-orient col-12 p-3">
-            <h5 class="text-center text-light mb-0">$0.00</h5>
+            <p class="text-center text-light font-size">$0.00</p>
           </div>
 
           <div class="row pt-3">
@@ -84,7 +84,5 @@
         </div>
       </div>
     </div>
-
-    <!-- <script src="app.js"></script> -->
   </body>
 </html>
