--- a/page4.html
+++ b/page4.html
@@ -21,13 +21,13 @@
           <h2 class="text-center fw-bold pb-3">The money you are going to take is ...</h2>
 
           <div class="d-flex justify-content-center">
-            <div class="calculation-box text-end col-8 px-1">
-              <h3 class="calculation-box mb-1 pr-2">5 × $100</h3>
-              <h3 class="calculation-box mb-1 pr-2">1 × $50</h3>
-              <h3 class="calculation-box mb-1 pr-2">2 × $20</h3>
-              <h3 class="calculation-box mb-1 pr-2">1 × $5</h3>
-              <h3 class="calculation-box mb-1 pr-2">4 × $1</h3>
-              <h3 class="m-2 pt-1 pr-2">total: $599</h3>
+            <div class="calculation-box text-end font-size col-8 px-1">
+              <p class="calculation-box mb-1 pr-2">5 × $100</p>
+              <p class="calculation-box mb-1 pr-2">1 × $50</p>
+              <p class="calculation-box mb-1 pr-2">2 × $20</p>
+              <p class="calculation-box mb-1 pr-2">1 × $5</p>
+              <p class="calculation-box mb-1 pr-2">4 × $1</p>
+              <p class="m-2 pt-1">total: $599</p>
             </div>
           </div>
 
@@ -42,7 +42,5 @@
         </div>
       </div>
     </div>
-
-    <!-- <script src="app.js"></script> -->
   </body>
 </html>
