Added sideBankSwitch function to avoid DRY

--- a/page2.html
+++ b/page2.html
@@ -33,19 +33,19 @@
 
           <div class="d-flex justify-content-center flex-wrap text-center py-1 px-3">
             <div class="col-lg-4 col-12 py-1 py-md-3 px-md-1">
-              <div id="withdrawBtn" class="bg-orient hover p-4">
+              <div id="withdrawBtn" class="bg-blue hover p-4">
                 <p class="font-size mb-3">WITHDRAWAL</p>
                 <i class="fas fa-wallet fa-3x"></i>
               </div>
             </div>
             <div class="col-lg-4 col-12 py-1 py-md-3 px-md-1">
-              <div id="depositBtn" class="bg-orient hover p-4">
+              <div id="depositBtn" class="bg-blue hover p-4">
                 <p class="font-size mb-3">DEPOSIT</p>
                 <i class="fas fa-coins fa-3x"></i>
               </div>
             </div>
             <div class="col-lg-4 col-12 py-1 py-md-3 px-md-1">
-              <div id="comeBackLaterBtn" class="bg-orient hover p-4">
+              <div id="comeBackLaterBtn" class="bg-blue hover p-4">
                 <p class="font-size mb-3">COME BACK LATER</p>
                 <i class="fas fa-home fa-3x"></i>
               </div>
