--- a/page1.html
+++ b/page1.html
@@ -18,39 +18,39 @@
     <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
       <div class="d-flex align-items-center col-md-6 col-10">
         <div id="initial-form" class="bg-light col-12 text-center p-5">
-          <h2 class="fw-bold pb-3">Please type your information below</h2>
+          <h2 class="fw-bold pt-3 pb-5">Please type your information below</h2>
 
           <form id="bank-form" class="form" onsubmit="initializeUserAccount(); event.preventDefault()">
             <div class="row pb-3">
               <div class="form-group col-6">
-                <input type="text" class="form-control" name="userFirstName" placeholder="First name" value="Masaki" required />
+                <input type="text" class="form-control p-3" name="userFirstName" placeholder="First name" value="Masaki" required />
               </div>
               <div class="form-group col-6">
-                <input type="text" class="form-control" name="userLastName" placeholder="Last name" value="Fukumoto" required />
+                <input type="text" class="form-control p-3" name="userLastName" placeholder="Last name" value="Fukumoto" required />
               </div>
             </div>
             <div class="form-group pb-3">
-              <input type="email" class="form-control" name="userEmail" placeholder="Email" value="fm@gmail.com" required />
+              <input type="email" class="form-control p-3" name="userEmail" placeholder="Email" value="fm8624@gmail.com" required />
             </div>
             <div class="form-group pb-3">
-              <input type="number" class="form-control" name="userFirstDeposit" placeholder="Enter your first deposit" value="200" required />
+              <input type="number" class="form-control p-3" name="userFirstDeposit" placeholder="Enter your first deposit" value="200" required />
             </div>
 
-            <div class="form-group pb-3">
-              <div class="form-check">
-                <label class="form-check-label" for="userAccountType1">
+            <div class="form-group d-flex justify-content-center align-items-center pb-3">
+              <div class="form-check col-2">
+                <label class="form-check-label p-3" for="userAccountType1">
                   <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType1" value="savings" checked required />
                   Savings
                 </label>
               </div>
-              <div class="form-check">
-                <label class="form-check-label" for="userAccountType2">
+              <div class="form-check col-2">
+                <label class="form-check-label p-3" for="userAccountType2">
                   <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType2" value="Checkings" required />
                   Checkings
                 </label>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary col-12">Submit</button>
+            <button type="submit" class="btn btn-primary fw-bold col-12 p-3">Submit</button>
           </form>
         </div>
         <div id="bankPage" class="bg-green col-12 text-center text-white"></div>
