Added process to calculate interest and reflect it in the balance

--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
     <title>Page 1</title>
   </head>
   <body>
-    <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
+    <div class="min-vh-100 bg-grey d-flex flex-column justify-content-center align-items-center">
       <div class="d-flex align-items-center col-md-6 col-10">
         <div id="initial-form" class="bg-light col-12 text-center p-5">
           <h2 class="fw-bold pt-3 pb-5">Please type your information below</h2>
@@ -46,14 +46,14 @@
               <div class="form-check col-2">
                 <label class="form-check-label p-3" for="userAccountType2">
                   <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType2" value="Checkings" required />
-                  Checkings
+                  Checking
                 </label>
               </div>
             </div>
             <button type="submit" class="btn btn-primary fw-bold col-12 p-3">Submit</button>
           </form>
         </div>
-        <div id="bankPage" class="bg-green col-12 text-center text-white"></div>
+        <div id="bankPage" class="bg-light col-12 text-center text-white"></div>
         <div id="sidePage" class="bg-light col-12 text-center"></div>
       </div>
     </div>
