--- a/page2.html
+++ b/page2.html
@@ -15,17 +15,17 @@
     <title>Page 2</title>
   </head>
   <body>
-    <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
+    <div class="min-vh-100 bg-grey d-flex flex-column justify-content-center align-items-center">
       <div class="d-flex align-items-center col-md-6 col-10">
-        <div class="bg-green text-center text-white col-12">
-          <div class="text-end mb-4 px-4">
+        <div class="bg-light text-center text-light col-12">
+          <div class="text-dark text-end mb-4 px-4">
             <p class="font-size m-3 p-1">Your Name: Kaiden Herman</p>
             <p class="font-size m-3 p-1">Your Bank ID: 12345678</p>
             <p class="font-size m-3 p-1">Your First Deposit: $205.00</p>
           </div>
 
           <div class="px-3">
-            <div class="d-flex justify-content-center bg-danger col-12 py-1 py-md-2">
+            <div class="d-flex justify-content-center btnx-cyan col-12 py-1 py-md-2">
               <p class="col-6 text-start font-size px-4">Available Balance</p>
               <p class="col-6 text-end font-size px-4">$12,345</p>
             </div>
