--- a/page4.html
+++ b/page4.html
@@ -15,7 +15,7 @@
     <title>Page 4</title>
   </head>
   <body>
-    <div class="min-vh-100 bg-dark d-flex flex-column justify-content-center align-items-center">
+    <div class="min-vh-100 bg-grey d-flex flex-column justify-content-center align-items-center">
       <div class="d-flex align-items-center col-md-6 col-10">
         <div class="bg-white col-12 text-center p-4">
           <h2 class="text-center fw-bold pb-3">The money you are going to take is ...</h2>
