Adjusted styles to apply to mobile sizes as well

--- a/page1.html
+++ b/page1.html
@@ -37,13 +37,13 @@
             </div>
 
             <div class="form-group d-flex justify-content-center align-items-center pb-3">
-              <div class="form-check col-2">
+              <div class="form-check">
                 <label class="form-check-label p-3" for="userAccountType1">
                   <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType1" value="savings" checked required />
                   Savings
                 </label>
               </div>
-              <div class="form-check col-2">
+              <div class="form-check">
                 <label class="form-check-label p-3" for="userAccountType2">
                   <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType2" value="Checkings" required />
                   Checking
