--- a/page1.html
+++ b/page1.html
@@ -36,15 +36,15 @@
               <input type="number" class="form-control p-3" name="userFirstDeposit" placeholder="Enter your first deposit" value="200" required />
             </div>
 
-            <div class="form-group d-flex justify-content-center align-items-center pb-3">
+            <div class="form-group d-flex justify-content-center align-items-center flex-column pb-3">
               <div class="form-check">
-                <label class="form-check-label p-3" for="userAccountType1">
+                <label class="form-check-label p-2" for="userAccountType1">
                   <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType1" value="savings" checked required />
                   Savings
                 </label>
               </div>
               <div class="form-check">
-                <label class="form-check-label p-3" for="userAccountType2">
+                <label class="form-check-label p-2" for="userAccountType2">
                   <input type="radio" class="form-check-input" name="userAccountType" id="userAccountType2" value="Checkings" required />
                   Checking
                 </label>
